--- a/Style/Board.css
+++ b/Style/Board.css
@@ -1,3 +1,59 @@
 body {
-    background-color: rgb(215, 240, 209);
+    background-color: rgb(0,0,0);
+    color: white;
+}
+
+div {
+  font-family: sans-serif;
+}
+
+#container{
+  width: 1600px
+}
+
+#players {
+  width: 700px
+}
+.column {
+    float: left;
+    padding: 10px;
+}
+
+.top {
+  border-color: rgb(255,255,255);
+  border-style:solid;
+  float:left;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  font-size: xx-large;
+}
+
+#top_row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.middle {
+  border-color: rgb(255,255,255);
+  border-style:solid;
+  float:left;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  font-size: xx-large;
+}
+#middle_row:after {
+  content: "";
+  display: table;
+  clear:both;
+}
+.bottom {
+  border-color: rgb(255,255,255);
+  border-style:solid;
+  float:left;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  font-size: xx-large;
 }
